terraform/kube-worker-sg.tf
#kubernetes-workernode
resource "aws_security_group" "kubernetes_worker_node" {
  name        = "kubernetes_worker_node"
  vpc_id      = aws_vpc.kubernetes_vpc.id

  ingress {
    description = "Kubelet API"
    from_port   = 10250
    to_port     = 10250
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    description = "NodePort Services"
    from_port   = 30000
    to_port     = 32767
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
  tags = {
    Name = "kubernetes-worker_node"
  }
}
